--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Home Fragment</string>
-    <string name="profile_fragment_label">Second Fragment</string>
+    <string name="profile_fragment_label">Profile Fragment</string>
+    <string name="login_fragment_label">Login Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
