--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
 
     <string name="type_a_section">Type a section.</string>
     <string name="submit">Submit</string>
+    <string name="collab_logo">Collab logo</string>
 </resources>
