--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="register_fragment_label">Register Fragment</string>
     <string name="logout">Logout</string>
     <string name="about">About</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
