--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="editor_actions">Editor actions</string>
     <string name="reset">Reset</string>
     <string name="download">Download</string>
+    <string name="action_info">Info</string>
 </resources>
